--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>SpPanks Particle System</title>
+<title>Visuals by Taylo SpPanks</title>
 <script language="javascript" type="text/javascript" src="p5.js"></script>
 <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
