--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Visuals by Taylo SpPanks</title>
-<script language="javascript" type="text/javascript" src="p5.js"></script>
-<script language="javascript" type="text/javascript" src="sketch.js"></script>
+<script src="p5.js"></script>
+<script src="sketch.js"></script>
 </head>
 <body>
 </body>
