--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Visuals by Taylo SpPanks</title>
-<script src="p5.js"></script>
+<script src="https://raw.githubusercontent.com/sppank/partsys1/master/p5.js"></script>
 <script src="sketch.js"></script>
 </head>
 <body>
