--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Visuals by Taylo SpPanks</title>
 <script src="https://raw.githubusercontent.com/sppank/partsys1/master/p5.js"></script>
-<script src="sketch.js"></script>
+<script src="https://raw.githubusercontent.com/sppank/partsys1/master/sketch.js"></script>
 </head>
 <body>
 </body>
