--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Visuals by Taylo SpPanks</title>
-<script src="https://raw.githubusercontent.com/sppank/partsys1/master/p5.js"></script>
-<script src="https://raw.githubusercontent.com/sppank/partsys1/master/sketch.js"></script>
-</head>
-<body>
-</body>
-</html>
+partsys
