--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <script language="javascript" type="text/javascript" src="sketch.js"></script>
 <title>SpPanks Particle System</title>
 </head>
-<body scroll="no" style="overflow: hidden" border="000000">
+<body>
 </body>
 </html>
