--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script language="javascript" type="text/javascript" src="p5.js"></script>
-<script language="javascript" type="text/javascript" src="sketch.js"></script>
+<script language="javascript" type="text/javascript" src="sketch.js" scroll="no"></script>
 <title>SpPanks Particle System</title>
 </head>
 <body scroll="no">
