--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+  <style>
+    body {
+    background-color: black;
+}
+	</style>
 <script language="javascript" type="text/javascript" src="p5.js"></script>
 <script language="javascript" type="text/javascript" src="sketch.js" scroll="no"></script>
 <title>SpPanks Particle System</title>
