--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-  <style>
-    body {
+	<style type="text/css">
+	body {
     background-color: black;
 }
-	</style>
+</style>
 <script language="javascript" type="text/javascript" src="p5.js"></script>
-<script language="javascript" type="text/javascript" src="sketch.js" scroll="no"></script>
+<script language="javascript" type="text/javascript" src="sketch.js"></script>
 <title>SpPanks Particle System</title>
 </head>
-<body scroll="no">
+<body>
 </body>
 </html>
