--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<style type="text/css">
 	body {
     background-color: black;
+    overflow: hidden;
 }
 </style>
 <script language="javascript" type="text/javascript" src="p5.js"></script>
 <script language="javascript" type="text/javascript" src="sketch.js"></script>
-<title>SpPanks Particle System</title>
+<title>SpPank</title>
 </head>
 <body>
 </body>
