--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 }
 </style>
 <script language="javascript" type="text/javascript" src="p5.js"></script>
+<script language="javascript" type="text/javascript" src="Population.js"></script>
+<script language="javascript" type="text/javascript" src="DNA.js"></script>
 <script language="javascript" type="text/javascript" src="sketch.js"></script>
 <title>SpPank</title>
 </head>
