--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script language="javascript" type="text/javascript" src="Population.js"></script>
 <script language="javascript" type="text/javascript" src="DNA.js"></script>
 <script language="javascript" type="text/javascript" src="sketch.js"></script>
-<title>SpPank</title>
+<title>Taylor Knapps</title>
 </head>
 <body>
 </body>
