--- a/index.html
+++ b/index.html
@@ -13,5 +13,26 @@
 <title>Taylor Knapps</title>
 </head>
 <body>
+	<style>
+.container { 
+  height: 200px;
+  position: relative;
+  border: 3px solid green; 
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+</style>
+
+<div class="container">
+  <div class="vertical-center">
+    <center>Visit site.</center>
+  </div>
+</div>
 </body>
 </html>
