--- a/index.html
+++ b/index.html
@@ -13,20 +13,28 @@
 <title>Taylor Knapps</title>
 </head>
 <body>
-	<style>
+<style>
+.container { 
+  height: 200px;
+  position: relative;
+  border: 3px solid green; 
+}
 
-.vertical-center {
+.center {
+	color: 255;
   margin: 0;
   position: absolute;
   top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 </style>
 
 
-  <div class="vertical-center">
-    <center>Visit site.</center>
-</div>
+  <div class="center">
+    <p>I am vertically and horizontally centered.</p>
+  </div>
+
 </body>
 </html>
