--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
   <div class="center">
-    <p>I am vertically and horizontally centered.</p>
+	  <p><font size="26" color="white">I am vertically and horizontally centered.</font></p>
   </div>
 
 </body>
