--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 .center {
 	color: white;
-	font-size: 28px;
+	font-size: 18px;
   margin: 0;
   position: absolute;
   top: 50%;
@@ -34,7 +34,7 @@
 
 
   <div class="center">
-	  <p><font size="26" color="white">I am vertically and horizontally centered.</font></p>
+	  <p><font size="26" color="white"><a href="http://www.taylorknapps.com/home/">Visit site.</a></font></p>
   </div>
 
 </body>
