--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
   <div class="center">
-	  <p><font size="18" color="white" face="helvetica"><a href="http://www.taylorknapps.com/home/">Visit site.</a></font></p>
+	  <p><font size="18" color="white" face="verdana"><a href="http://www.taylorknapps.com/home/">Visit site.</a></font></p>
   </div>
 
 </body>
